update current track while playing, fixed design of playlist, fixed playlist jumping

--- a/styles.css
+++ b/styles.css
@@ -216,17 +216,15 @@ html {
   }
   #list {
     width: 100%;
-    height: 360px;
     position: absolute;
     top: 50%;
-    left: 0;
-    margin: -180px auto;
+    transform: translateY(-50%);
   }
   .list-song {
     width: 100%;
-    height: 120px;
-    font-size: 50px;
-    line-height: 120px;
+    height: 6vh;
+    font-size: 5vh;
+    line-height: 6vh;
     text-align: center;
     font-weight: bold;
     color: #fff;
